--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="open-sans-normal">
     <header>
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="drak-2" href="">Portfolio</a></li>
+                <li><a class="drak-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
