--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="banner-content">
                 <h4 class="banner-greetings">Hi, I am </h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
 
@@ -30,10 +31,14 @@
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main> 
+    <main>
+        <!-- about section start  -->
         <section class="about secondary-bg">
             <h2 class="section-title">About Me</h2>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-items">
                 <div class="about-item">
                     <p class="item-title">Name:</p>
@@ -53,6 +58,34 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section start  -->
+         <section class="skills">
+            <h4 class="section-title text-center">What I do</h4>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+         </section>
 
     </main>
     <footer>
